added automated footnote feature and changed online web-rendered links into <a href> rather than <a goto>

--- a/src/template/content/home.html
+++ b/src/template/content/home.html
@@ -48,5 +48,6 @@
     * **Eldram** - Powerful Eldras.
     * **Ka'Eldra** - Meaning, half-spirit, refers to changed mortals who became a half-eldra due to circumstances, mostly as a result of being chosen by an Eldrada, turning their body into a form much more suitable at handling the gifted power.
     asdsadasdasd
+    ** Test
   </div>
 </div>
