--- a/src/template/content/story/ethan-morales.html
+++ b/src/template/content/story/ethan-morales.html
@@ -140,7 +140,7 @@
     > Never let your morality prevent you from doing what is Right. - Ethan Morales
     
     
-    Ethan Morales is the Main Protagonist of the novel "The Birth of a Hero" and the the central point of the story. He is a student studying in U.H.A. and is part of E-Class.
+    Ethan Morales is the Main Protagonist of the novel "The Birth of a Hero" and the the central point of the story. He is a student studying in U.H.A. and is part of E-Class.[[ref: home]] [[ref: ethan morales | MORALES]]
 
     He and his family are Desterian Immigrants who migrated to Arlika in order to seek a better life. The first six years of his life was spent in Desteria, witnessing the cruelty of drug cartels and the ghetto, caused a life-long influenced on Ethan's psyche that even he didn't knew he had.
 
@@ -172,7 +172,7 @@
     * Study the Abilities of his classmates and copy useful ones
     * Befriend anyone with interesting and useful research, i.e. the biology, inventor, and research club.
     * Obtain the extremely rare Ebony ingot
-    * Test his guns and custom ammos on anyone
+    * Test his guns and custom ammos on anyone 
 
     # History
 
