updared list and made it tab better. also fixed rerender which creates new page history entries.

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -12,8 +12,7 @@
 
   <!-- Scripts -->
   <script rel="modulepreload" src=".eternal/js/vue/vue.global.js"></script>
-  <script rel="modulepreload" src=".eternal/js/component.js"></script>
-  <script rel="modulepreload" src=".eternal/js/render.js"></script>
+  <script rel="modulepreload" src=".eternal/js/main.min.js"></script>
 
   <!-- Editor Scripts -->
   <script rel="modulepreload" src=".eternal/js/editor/notifications.js"></script>
