--- a/src/template/index.html
+++ b/src/template/index.html
@@ -12,7 +12,8 @@
 
   <!-- Scripts -->
   <script rel="modulepreload" src=".eternal/js/vue/vue.global.js"></script>
-  <script rel="modulepreload" src=".eternal/js/main.min.js"></script>
+  <script rel="modulepreload" src=".eternal/js/components.js"></script>
+  <script rel="modulepreload" src=".eternal/js/render.js"></script>
 
   <!-- Editor Scripts -->
   <script rel="modulepreload" src=".eternal/js/editor/notifications.js"></script>
